# noaa-climate

./: dev.py  main.py  pyproject.toml
.github/workflows/: run.yml
.state/local/: global_temperature_anomalies.json  precipitation_data.json  regional_climate_data.json
assets/global_temperature_anomalies/: global_temperature_anomalies.py
assets/precipitation_data/: precipitation_data.py
assets/regional_climate_data/: regional_climate_data.py
